PP-9016: normalise URL usage for webhook send attemptor